deploy-k8s/weaviate-vectordb.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weaviate-db
  labels:
    app: weaviate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weaviate
  template:
    metadata:
      labels:
        app: weaviate
    spec:
      containers:
      - name: weaviate-db
        image: semitechnologies/weaviate:1.23.9
        ports:
        - containerPort: 8080
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: weaviate
spec:
  selector:
    app: weaviate
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  # ports:
  #   - protocol: TCP
  #     port: 50051
  #     targetPort: 50051
