deploy-k8s/network-policy-allow-port-80-backend-only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-80-backend
  namespace: aviata-chatbot
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
    - ports:
      - protocol: TCP
        port: 80
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
