deploy-k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-other-namespaces
  namespace: aviata-chatbot
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
      namespaceSelector:
        matchLabels:
          name: aviata-chatbot
  egress:
  - to:
    - podSelector: {}
      namespaceSelector:
        matchLabels:
          name: aviata-chatbot
